# aipi

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  OUTPUT_FIX_EXPLANATION.md  README.md  TRANSFORMER_ARCHITECTURE_EXPLANATION.md  deps.json  qwen3.jinja  run.cc  run1.cc  run2.cc  vcpkg.json
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev  docker-bake.hcl
